Fixed hover behavior of cards on tablet size and under

--- a/app/assets/stylesheets/pages/_flat_show.scss
+++ b/app/assets/stylesheets/pages/_flat_show.scss
@@ -24,9 +24,12 @@
     transition: none;
     height:150px;
     margin-bottom:20px;
+    &:hover{
+      margin-top: 0 !important;
+    }
   }
   .caracteristics__card:first-child{
-    margin-top: 20px;
+    margin-top: 20px !important;
   }
 }
 
